@@ -1856,6 +1856,42 @@ return|return
 literal|true
 return|;
 block|}
+DECL|method|anyChanges
+specifier|synchronized
+name|boolean
+name|anyChanges
+parameter_list|()
+block|{
+return|return
+name|numDocsInRAM
+operator|!=
+literal|0
+operator|||
+name|deletesInRAM
+operator|.
+name|numTerms
+operator|!=
+literal|0
+operator|||
+name|deletesInRAM
+operator|.
+name|docIDs
+operator|.
+name|size
+argument_list|()
+operator|!=
+literal|0
+operator|||
+name|deletesInRAM
+operator|.
+name|queries
+operator|.
+name|size
+argument_list|()
+operator|!=
+literal|0
+return|;
+block|}
 DECL|method|initFlushState
 specifier|synchronized
 specifier|private
