@@ -971,7 +971,7 @@ name|directory
 argument_list|)
 return|;
 block|}
-comment|/**    * Version number when this IndexReader was opened. Not implemented in the IndexReader base class.    * @throws UnsupportedOperationException unless overridden in subclass    */
+comment|/**    * Version number when this IndexReader was opened. Not    * implemented in the IndexReader base class.    *    *<p>If this reader is based on a Directory (ie, was    * created by calling {@link #open}, or {@link #reopen} on    * a reader based on a Directory), then this method    * returns the version recorded in the commit that the    * reader opened.  This version is advanced every time    * {@link IndexWriter#commit} is called.</p>    *    *<p>If instead this reader is a near real-time reader    * (ie, obtained by a call to {@link    * IndexWriter#getReader}, or by calling {@link #reopen}    * on a near real-time reader), then this method returns    * the version of the last commit done by the writer.    * Note that even as further changes are made with the    * writer, the version will not changed until a commit is    * completed.  Thus, you should not rely on this method to    * determine when a near real-time reader should be    * opened.  Use {@link #isCurrent} instead.</p>    *    * @throws UnsupportedOperationException unless overridden in subclass    */
 DECL|method|getVersion
 specifier|public
 name|long
@@ -1001,7 +1001,7 @@ literal|"This reader does not support this method."
 argument_list|)
 throw|;
 block|}
-comment|/**    * Check whether this IndexReader is still using the    * current (i.e., most recently committed) version of the    * index.  If a writer has committed any changes to the    * index since this reader was opened, this will return    *<code>false</code>, in which case you must open a new    * IndexReader in order to see the changes.  Changes must    * be committed using  {@link IndexWriter#commit} to be    * visible to readers.    *     *<p>    * Not implemented in the IndexReader base class.    *</p>    * @throws CorruptIndexException if the index is corrupt    * @throws IOException if there is a low-level IO error    * @throws UnsupportedOperationException unless overridden in subclass    */
+comment|/**    * Check whether any new changes have occurred to the    * index since this reader was opened.    *    *<p>If this reader is based on a Directory (ie, was    * created by calling {@link #open}, or {@link #reopen} on    * a reader based on a Directory), then this method checks    * if any further commits (see {@link IndexWriter#commit}    * have occurred in that directory).</p>    *    *<p>If instead this reader is a near real-time reader    * (ie, obtained by a call to {@link    * IndexWriter#getReader}, or by calling {@link #reopen}    * on a near real-time reader), then this method checks if    * either a new commmit has occurred, or any new    * uncommitted changes have taken place via the writer.    * Note that even if the writer has only performed    * merging, this method will still return false.</p>    *    *<p>In any event, if this returns false, you should call    * {@link #reopen} to get a new reader that sees the    * changes.</p>    *    * @throws CorruptIndexException if the index is corrupt    * @throws IOException           if there is a low-level IO error    * @throws UnsupportedOperationException unless overridden in subclass    */
 DECL|method|isCurrent
 specifier|public
 name|boolean
