@@ -14556,6 +14556,53 @@ return|return
 literal|true
 return|;
 block|}
+DECL|method|nrtIsCurrent
+specifier|synchronized
+name|boolean
+name|nrtIsCurrent
+parameter_list|(
+name|SegmentInfos
+name|infos
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|infos
+operator|.
+name|equals
+argument_list|(
+name|segmentInfos
+argument_list|)
+condition|)
+block|{
+comment|// if any structural changes (new segments), we are
+comment|// stale
+return|return
+literal|false
+return|;
+block|}
+else|else
+block|{
+return|return
+operator|!
+name|docWriter
+operator|.
+name|anyChanges
+argument_list|()
+return|;
+block|}
+block|}
+DECL|method|isClosed
+specifier|synchronized
+name|boolean
+name|isClosed
+parameter_list|()
+block|{
+return|return
+name|closed
+return|;
+block|}
 block|}
 end_class
 end_unit
