@@ -462,6 +462,14 @@ operator|.
 name|getReader
 argument_list|()
 decl_stmt|;
+name|assertTrue
+argument_list|(
+name|r1
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|String
 name|id10
 init|=
@@ -538,6 +546,14 @@ argument_list|,
 name|newDoc
 argument_list|)
 expr_stmt|;
+name|assertFalse
+argument_list|(
+name|r1
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|IndexReader
 name|r2
 init|=
@@ -546,6 +562,14 @@ operator|.
 name|getReader
 argument_list|()
 decl_stmt|;
+name|assertTrue
+argument_list|(
+name|r2
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|assertEquals
 argument_list|(
 literal|0
@@ -592,15 +616,18 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
-name|r2
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
 name|writer
 operator|.
 name|close
 argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|r2
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
 expr_stmt|;
 name|IndexReader
 name|r3
@@ -614,6 +641,22 @@ argument_list|,
 literal|true
 argument_list|)
 decl_stmt|;
+name|assertTrue
+argument_list|(
+name|r3
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|r2
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|assertEquals
 argument_list|(
 literal|0
@@ -654,6 +697,106 @@ argument_list|,
 name|r3
 argument_list|)
 argument_list|)
+expr_stmt|;
+name|writer
+operator|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir1
+argument_list|,
+operator|new
+name|WhitespaceAnalyzer
+argument_list|()
+argument_list|,
+name|IndexWriter
+operator|.
+name|MaxFieldLength
+operator|.
+name|LIMITED
+argument_list|)
+expr_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"a b c"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|ANALYZED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|r2
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|r3
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|r2
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|!
+name|r3
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|r2
+operator|.
+name|close
+argument_list|()
 expr_stmt|;
 name|r3
 operator|.
@@ -784,6 +927,22 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+name|IndexReader
+name|r0
+init|=
+name|writer
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|r0
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|writer
 operator|.
 name|addIndexesNoOptimize
@@ -796,6 +955,19 @@ name|dir2
 block|}
 argument_list|)
 expr_stmt|;
+name|assertFalse
+argument_list|(
+name|r0
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|r0
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 name|IndexReader
 name|r1
 init|=
@@ -804,6 +976,27 @@ operator|.
 name|getReader
 argument_list|()
 decl_stmt|;
+name|assertTrue
+argument_list|(
+name|r1
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|r1
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|assertEquals
 argument_list|(
 literal|200
